architecture-ide/tests/fixtures/negative/C3_op_principle_uses_foreign_action.concept
concept Counter

  purpose
    count things

  state
    total: int

  actions
    inc [ ] => [ total: int ]

  operational principle
    after inc [ ] => [ total: 1 ]
    then sendEmail [ body: "hi" ] => [ sent: true ]
